make sure a global ".hidden" CSS rule doesn't break the widget

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -276,6 +276,11 @@
     min-height: 5em;
 }
 
+.bubble.hidden {
+    /* some apps have a global "hidden" class that has display:none set. */
+    display: block;
+}
+
 .bubble.hidden .bubble-expandable {
     display: none;
 }
